services/simon-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: simon
  namespace: simon

spec:
  selector:
    app: simon

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: ClusterIP
