services/dev-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-dev-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: nginx-dev.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-dev-service
            port:
              number: 80
